--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -15,13 +15,13 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/money"
+            android:src="@drawable/logo"
             android:layout_gravity="center" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quản Lý Chi Tiêu"
+            android:text="Sweet Dream Baby"
             android:layout_below="@+id/imageView"
             android:padding="16dp"
             android:textSize="30dp"
@@ -40,18 +40,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/kenlogo" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="PĐT"
-                android:textSize="30dp"
-                android:layout_gravity="center" />
         </LinearLayout>
     </LinearLayout>
 
