--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,23 +23,26 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:orientation="vertical"
-            android:background="#FFF">
+            android:background="#9B9B9B">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="horizontal">
 
-                <ImageView
+                <SearchView
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:src="@mipmap/pdt"
-                    android:layout_marginTop="10dp" />
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/radiussearch"
+                    android:id="@+id/searchView" />
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#9B9B9B"
                 android:orientation="vertical">
 
                 <ListView
