--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#2196F3</color>
+    <color name="primaryColor">#F5A623</color>
     <color name="primaryColorDark">#1976D2</color>
     <color name="accentColor">#FF5722</color>
     <color name="rippleColor">#b6b6b6</color>
