Update Layout Book List

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:background="#9B9B9B"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#9B9B9B">
         <FrameLayout
             android:id="@+id/frame_container"
             android:layout_width="match_parent"
