--- a/app/src/main/res/layout/activity_my_books.xml
+++ b/app/src/main/res/layout/activity_my_books.xml
@@ -6,7 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="vn.pro205.android.sweetdreambaby.MyBooks">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@id/android:list"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
