--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#9B9B9B">
+        android:background="#ffffff">
         <FrameLayout
             android:id="@+id/frame_container"
             android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:orientation="vertical"
-            android:background="#9B9B9B">
+            android:background="#ffffff">
 
             <LinearLayout
                 android:layout_width="match_parent"
