--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,6 @@
     <dimen name="size_text_secondary">14sp</dimen>
     <dimen name="size_half_byte">4dp</dimen>
     <dimen name="size_byte">8dp</dimen>
-    <dimen name="movie_thumbnail_width">100dp</dimen>
-    <dimen name="movie_thumbnail_height">50dp</dimen>
+    <dimen name="book_thumbnail_width">200dp</dimen>
+    <dimen name="book_thumbnail_height">100dp</dimen>
 </resources>
