--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,9 +18,9 @@
     <dimen name="fab_actions_spacing">16dp</dimen>
     <dimen name="fab_labels_margin">8dp</dimen>
 
-    <dimen name="size_word">16dp</dimen>
-    <dimen name="size_text_primary">16sp</dimen>
-    <dimen name="size_text_secondary">14sp</dimen>
+    <dimen> name="size_word">16dp</dimen>
+    <dimen name="size_text_primary">16dp</dimen>
+    <dimen name="size_text_secondary">14dp</dimen>
     <dimen name="size_half_byte">4dp</dimen>
     <dimen name="size_byte">8dp</dimen>
     <dimen name="book_thumbnail_width">200dp</dimen>
