--- a/app/src/main/res/layout/activity_my_books.xml
+++ b/app/src/main/res/layout/activity_my_books.xml
@@ -7,6 +7,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/customshapelist"
         android:id="@id/android:list" />
 
 </RelativeLayout>
