--- a/app/src/main/res/layout/custom_items_list_adapter.xml
+++ b/app/src/main/res/layout/custom_items_list_adapter.xml
@@ -6,21 +6,29 @@
 
     <ImageView
         android:id="@+id/imageView"
+
         android:layout_width="@dimen/book_thumbnail_width"
-        android:layout_height="@dimen/book_thumbnail_height" />
+        android:layout_height="@dimen/book_thumbnail_height"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp" />
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/imageView"
-        android:layout_marginLeft="56dp"
+        android:layout_toRightOf="@+id/imageView"
         android:alpha="0.87"
         android:gravity="right"
-        android:padding="@dimen/size_half_byte"
+        android:text="Hello"
+        android:textColor="@color/primaryColor"
         android:textSize="@dimen/size_text_primary" />
+    <!--!-->
+
 
     <TextView
         android:id="@+id/txtAuthor"
@@ -28,15 +36,41 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/txtTitle"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/imageView"
+
+        android:layout_toRightOf="@+id/imageView"
         android:alpha="0.87"
-        android:padding="@dimen/size_half_byte"
+        android:gravity="right"
+        android:text="Hello"
+        android:textColor="#8dbab3"
         android:textSize="@dimen/size_text_secondary" />
 
     <Button
         android:id="@+id/btnBuy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_below="@id/txtAuthor"
-        android:isIndicator="true" />
+        android:layout_marginTop="5dp"
+        android:background="@drawable/custuomshapebutton"
+        android:isIndicator="true"
+        android:textColor="@color/white" />
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/btnBuy" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/txtRatingValue"
+        android:layout_below="@+id/ratingBar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
