Update Book List

--- a/app/src/main/res/layout/custom_items_list_adapter.xml
+++ b/app/src/main/res/layout/custom_items_list_adapter.xml
@@ -38,7 +38,6 @@
         android:layout_below="@id/txtTitle"
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/imageView"
-
         android:layout_toRightOf="@+id/imageView"
         android:alpha="0.87"
         android:gravity="right"
@@ -58,19 +57,14 @@
         android:textColor="@color/white" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/myRatingBar"
+        style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/btnBuy" />
+        android:numStars="5"
+        android:isIndicator="false"
+        android:layout_below="@+id/imageView"
+        android:layout_alignRight="@+id/txtAuthor"
+        android:layout_alignEnd="@+id/txtAuthor" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/txtRatingValue"
-        android:layout_below="@+id/ratingBar"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 </RelativeLayout>
