--- a/app/src/main/res/drawable/custuomshapebutton.xml
+++ b/app/src/main/res/drawable/custuomshapebutton.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
             <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#000000" android:endColor="#58857e" />
+            <gradient android:angle="-90" android:startColor="#3299BB" android:endColor="#58857e" />
         </shape>
     </item>
 </selector>
