--- a/app/src/main/res/layout/activity_my_books.xml
+++ b/app/src/main/res/layout/activity_my_books.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/customshapelist"
         android:id="@id/android:list"
-        android:scrollbars="none"/>
+        android:scrollbars="none"
+        android:dividerHeight="5dp"/>
 
 </RelativeLayout>
