--- a/app/src/main/res/layout/custom_items_list_adapter.xml
+++ b/app/src/main/res/layout/custom_items_list_adapter.xml
@@ -47,8 +47,8 @@
 
     <Button
         android:id="@+id/btnBuy"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
+        android:layout_width="70dp"
+        android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_below="@id/txtAuthor"
         android:layout_marginTop="5dp"
@@ -65,6 +65,7 @@
         android:isIndicator="false"
         android:layout_below="@+id/imageView"
         android:layout_alignRight="@+id/txtAuthor"
-        android:layout_alignEnd="@+id/txtAuthor" />
+        android:layout_alignEnd="@+id/txtAuthor"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
