--- a/app/src/main/res/drawable/customshapelist.xml
+++ b/app/src/main/res/drawable/customshapelist.xml
@@ -22,8 +22,8 @@
     android:top="5dp"
     android:right="5dp"
     android:bottom="5dp" />
-<corners
-    android:radius="8dp" />
+<!--<corners
+    android:radius="8dp" />-->
 <solid
     android:color="@color/white"/>
 </shape>
