--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#BCBCBC">
 
 
     <android.support.v4.widget.NestedScrollView
@@ -60,7 +61,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:layout_gravity="center_horizontal"></RatingBar>
+                        android:layout_gravity="center_horizontal"
+                        android:isIndicator="false"></RatingBar>
 
                     <Button
                         android:layout_width="wrap_content"
@@ -122,7 +124,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:layout_gravity="center_horizontal"></RatingBar>
+                        android:layout_gravity="center_horizontal"
+                        android:isIndicator="false"></RatingBar>
 
                     <Button
                         android:layout_width="wrap_content"
@@ -185,7 +188,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:layout_gravity="center_horizontal"></RatingBar>
+                        android:layout_gravity="center_horizontal"
+                        android:isIndicator="false"></RatingBar>
 
                     <Button
                         android:layout_width="wrap_content"
@@ -248,7 +252,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:layout_gravity="center_horizontal"></RatingBar>
+                        android:layout_gravity="center_horizontal"
+                        android:isIndicator="false"></RatingBar>
 
                     <Button
                         android:layout_width="wrap_content"
@@ -311,7 +316,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:layout_gravity="center_horizontal"></RatingBar>
+                        android:layout_gravity="center_horizontal"
+                        android:isIndicator="false"></RatingBar>
 
                     <Button
                         android:layout_width="wrap_content"
