--- a/app/src/main/res/layout/activity_my_books.xml
+++ b/app/src/main/res/layout/activity_my_books.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/customshapelist"
-        android:id="@id/android:list"
+        android:id="@+id/list"
         android:scrollbars="none"
         android:dividerHeight="5dp"
         android:divider="@color/primaryColor"
