--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -29,7 +29,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="182dp"
                         android:src="@drawable/ironman2"
                         android:layout_gravity="center_horizontal">
 
@@ -92,7 +92,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="182dp"
                         android:src="@drawable/xmenfirstclass"
                         android:layout_gravity="center_horizontal">
 
@@ -156,7 +156,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="182dp"
                         android:src="@drawable/thor"
                         android:layout_gravity="center_horizontal">
 
@@ -220,7 +220,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="182dp"
                         android:src="@drawable/lordofring"
                         android:layout_gravity="center_horizontal">
 
@@ -284,7 +284,7 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="182dp"
                         android:src="@drawable/xmenfirstclass"
                         android:layout_gravity="center_horizontal">
 
